added feature - find user on GitHub and display profile

--- a/styles.css
+++ b/styles.css
@@ -10,18 +10,21 @@ nav {
 }
 nav h1 {
   color: white;
-  font-size: 30px;
+  font-size: 40px;
+  line-height: 50px;
+  text-align: center;
+  margin: 0;
 }
 
 .search, .profile, .repo {
-  border: 1px solid lightgrey;
-  margin: 10px 0;
-  padding: 10px 5px;
+  border: 1px solid lightgray;
+  margin: 5px 0;
+  padding: 10px;
 }
 
 .search {
   text-align: center;
-  background-color: lightgrey;
+  background-color: lightgray;
 }
 .search input {
   padding: 10px;
@@ -31,6 +34,82 @@ nav h1 {
 }
 .search input:focus {
   outline: none;
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  border: none;
+}
+.flex-container .profile-info-wrap {
+  flex: 30%;
+}
+.flex-container .profile-info-wrap .profile-img {
+  max-width: 300px;
+}
+.flex-container .profile-info-wrap .profile-img img {
+  min-width: 100px;
+  width: 100%;
+  height: auto;
+  display: block;
+  box-shadow: 0 2px 5px lightgrey;
+}
+.flex-container .profile-info-wrap .profile-img .view-link {
+  display: block;
+  background-color: white;
+  border: 2px solid #2196F3;
+  color: #2196F3;
+  margin: 10px 0;
+  border-radius: 5px;
+  text-align: center;
+  padding: 10px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: 0.2s ease;
+}
+.flex-container .profile-info-wrap .profile-img .view-link:hover {
+  background-color: #2196F3;
+  border: 2px solid #2196F3;
+  color: white;
+}
+.flex-container .profile-badges-wrap {
+  flex: 70%;
+}
+.flex-container .profile-badges-wrap .profile-badges {
+  display: flex;
+  justify-content: center;
+  margin: 41px 0 30px;
+}
+.flex-container .profile-badges-wrap .profile-badges .badge {
+  margin: 0 5px;
+  border: 1px solid lightgray;
+  padding: 5px;
+  border-radius: 5px;
+}
+.flex-container .profile-badges-wrap .profile-badges .badge.badge-blue {
+  border: 1px solid #2196F3;
+}
+.flex-container .profile-badges-wrap .profile-badges .badge.badge-yellow {
+  border: 1px solid orange;
+}
+.flex-container .profile-badges-wrap .profile-badges .badge.badge-green {
+  border: 1px solid forestgreen;
+}
+.flex-container .profile-badges-wrap .profile-badges .badge.badge-purple {
+  border: 1px solid mediumpurple;
+}
+.flex-container .profile-badges-wrap .profile-about {
+  padding-left: 10px;
+}
+.flex-container .profile-badges-wrap .profile-about .profile-about-item {
+  display: block;
+  list-style-type: none;
+  border: 1px solid lightgray;
+  padding: 8px;
+  border-collapse: collapse;
+}
+.flex-container .profile-badges-wrap .profile-about .profile-about-item:not(:last-child) {
+  border-bottom: none;
 }
 
 /*# sourceMappingURL=styles.css.map */
