--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,8 @@ nav h1 {
   display: block;
   box-shadow: 0 2px 5px lightgrey;
 }
-.profile-info-wrap .profile-img .view-link {
+
+.view-link {
   display: block;
   background-color: white;
   border: 2px solid #2196F3;
@@ -77,10 +78,18 @@ nav h1 {
   font-weight: bold;
   transition: 0.2s ease;
 }
-.profile-info-wrap .profile-img .view-link:hover {
+.view-link.search-btn {
+  display: inline-block;
+  padding: 8px 15px;
+  margin: 0 0 0 3px;
+}
+.view-link:hover {
   background-color: #2196F3;
   border: 2px solid #2196F3;
   color: white;
+}
+.view-link:focus {
+  outline: none;
 }
 
 .profile-badges-wrap {
@@ -194,6 +203,15 @@ nav h1 {
 
   .repo .repo-link a {
     margin: 15px 0 5px;
+  }
+
+  .view-link.search-btn {
+    padding: 8px 25px;
+    margin: 10px 0 0;
+  }
+
+  .search input {
+    width: 90%;
   }
 }
 
