--- a/styles.scss
+++ b/styles.scss
@@ -63,27 +63,36 @@ nav{
         display: block;
         box-shadow: 0 2px 5px lightgrey;
       }
-      .view-link{
-        display: block;
-        background-color: white;
-        border: 2px solid #2196F3;
-        color: #2196F3;
-        margin: 10px 0;
-        border-radius: 5px;
-        text-align: center;
-        letter-spacing: .3px;
-        padding: 10px;
-        text-decoration: none;
-        font-weight: bold;
-        transition: .2s ease;
-        &:hover{
-          background-color: #2196F3;
-          border: 2px solid #2196F3;
-          color: white;
-        }
-      }
-    }
+   }
+}
+
+.view-link{
+  display: block;
+  background-color: white;
+  border: 2px solid #2196F3;
+  color: #2196F3;
+  margin: 10px 0;
+  border-radius: 5px;
+  text-align: center;
+  letter-spacing: .3px;
+  padding: 10px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: .2s ease;
+  &.search-btn{
+    display: inline-block;
+    padding: 8px 15px;
+    margin: 0 0 0 3px;
   }
+  &:hover{
+    background-color: #2196F3;
+    border: 2px solid #2196F3;
+    color: white;
+  }
+  &:focus{
+    outline: none;
+  }
+}
 
 .profile-badges-wrap{
   flex: 70%;
@@ -200,5 +209,12 @@ nav{
   }
   .repo .repo-link a{
     margin: 15px 0 5px;
+  }
+  .view-link.search-btn {
+    padding: 8px 25px;
+    margin: 10px 0 0;
+  }
+  .search input {
+    width: 90%;
   }
 }
